feat: ajustes